--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,15 @@
     font-weight: 200;
 }
 
+body {
+    opacity: 0;
+    transition: opacity 2.5s cubic-bezier(.4, 0, .2, 1);
+}
+
+body.loaded {
+    opacity: 1;
+}
+
 .intro-section {
     display: flex;
     /* stack items vertically */
@@ -40,7 +49,7 @@
     /* maintain aspect ratio */
     width: 100%;
     height: auto;
-    
+
     max-width: 600px;
     border-radius: 2%;
     margin: 1rem;
